Implemetación del ejercicio 3 y 4

--- a/index.html
+++ b/index.html
@@ -18,15 +18,15 @@
         </tr>
         <tr>
           <td><a href="listaEjercicios/ejercicio2.html">#2</a></td>
-          <td>vector con 10 números enteros ingresado por el usuario, determinar cantidad de primos, número en el vector con más divisores</td>
+          <td>Vector con 10 números enteros ingresado por el usuario, determinar cantidad de primos, número en el vector con más divisores</td>
         </tr>
         <tr>
           <td><a href="listaEjercicios/ejercicio3.html">#3</a></td>
-          <td>vector con 10 números enteros ingresado por el usuario, determinar cantidad de primos, número en el vector con más divisores</td>
+          <td>Diseñe un script java y el código HTML necesario para buscar en un vector los números en posiciones impares que terminan en 7</td>
         </tr>
         <tr>
-          <td>none</td>
-          <td>The list items will not be marked</td>
+          <td><a href="listaEjercicios/ejercicio4.html">#4</a></td>
+          <td>Construir y llenar dos vectores y formar un tercer vector con los elementos mayores en cada posición</td>
         </tr>
       </tbody>
     </table>
