Implementacion del punto 5

--- a/index.html
+++ b/index.html
@@ -28,6 +28,10 @@
           <td><a href="listaEjercicios/ejercicio4.html">#4</a></td>
           <td>Construir y llenar dos vectores y formar un tercer vector con los elementos mayores en cada posición</td>
         </tr>
+        <tr>
+          <td><a href="listaEjercicios/ejercicio5.html">#5</a></td>
+          <td>Diseñe un script java y el código HTML necesario para Determinar la cantidad de números primos presentes en un vector y mostrar sus posiciones en el vector</td>
+        </tr>
       </tbody>
     </table>
   </body>
