Se implementaron los puntos 6, 7 y 8

--- a/index.html
+++ b/index.html
@@ -32,6 +32,18 @@
           <td><a href="listaEjercicios/ejercicio5.html">#5</a></td>
           <td>Diseñe un script java y el código HTML necesario para Determinar la cantidad de números primos presentes en un vector y mostrar sus posiciones en el vector</td>
         </tr>
+        <tr>
+          <td><a href="listaEjercicios/ejercicio6.html">#6</a></td>
+          <td>Llenar un vector de tamaño especificado por el usuario y llenarlo de los primeros números primos</td>
+        </tr>
+        <tr>
+          <td><a href="listaEjercicios/ejercicio7.html">#7</a></td>
+          <td>Obtener la suma, el promedio y las posiciones en el vector donde hay números mayores al promedio</td>
+        </tr>
+        <tr>
+          <td><a href="listaEjercicios/ejercicio8.html">#8</a></td>
+          <td>Llenar un arreglo de tamaño 10 de números enteros aleatorios de tres cifras, y llenar otro arreglo con las sumas de las cifras de cada una de las entradas del primer vector</td>
+        </tr>
       </tbody>
     </table>
   </body>
