Inicio implementacion ejercicio 9

--- a/index.html
+++ b/index.html
@@ -44,6 +44,10 @@
           <td><a href="listaEjercicios/ejercicio8.html">#8</a></td>
           <td>Llenar un arreglo de tamaño 10 de números enteros aleatorios de tres cifras, y llenar otro arreglo con las sumas de las cifras de cada una de las entradas del primer vector</td>
         </tr>
+        <tr>
+          <td><a href="listaEjercicios/ejercicio9.html">#9</a></td>
+          <td> Llenar un arreglo de tamaño 10 de números enteros aleatorios de tres cifras ordenarlo de mayor a menor</td>
+        </tr>
       </tbody>
     </table>
   </body>
