--- a/index.html
+++ b/index.html
@@ -48,6 +48,10 @@
           <td><a href="listaEjercicios/ejercicio9.html">#9</a></td>
           <td> Llenar un arreglo de tamaño 10 de números enteros aleatorios de tres cifras ordenarlo de mayor a menor</td>
         </tr>
+        <tr>
+          <td><a href="listaEjercicios/ejercicio10.html">#10</a></td>
+          <td> Llenar un arreglo de tamaño 10 de números enteros aleatorios de tres cifras y determinar la suma de las posiciones del arreglo donde hay números capicúas o números perfectos</td>
+        </tr>
       </tbody>
     </table>
   </body>
